Fix to handle step without description